<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/darker_gray"
        android:text="@string/title"
        android:textSize="25sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/bakeryonthego"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:background="@android:color/darker_gray"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/black"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:autoLink="map"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operating_hours"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:autoLink="phone"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:padding="15dp"/>

</LinearLayout>